* Fixed potential deadlock getting exclusive lock for LMDB storage. * Added validation reads and write lengths. * Added validation when creating directories. * Added validation when deleting files. * Fixed several minor log bugs.